--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booking-app",
+  "name": "bookingpal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "simplebar-react": "^2.0.10",
     "styled-components": "^4.4.1",
     "styled-reset": "^4.0.7"
   },
