--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@blueprintjs/core": "^3.21.0",
     "@blueprintjs/datetime": "^3.15.1",
     "@blueprintjs/select": "^3.11.2",
+    "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
