--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "simplebar-react": "^2.0.10",
     "styled-components": "^4.4.1",
     "styled-reset": "^4.0.7"
