--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@blueprintjs/core": "^3.21.0",
     "@blueprintjs/datetime": "^3.15.1",
     "@blueprintjs/select": "^3.11.2",
+    "date-fns": "^2.8.1",
     "js-cookie": "^2.2.1",
-    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
