--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@blueprintjs/core": "^3.21.0",
     "@blueprintjs/datetime": "^3.15.1",
     "@blueprintjs/select": "^3.11.2",
+    "cleave.js": "^1.5.3",
     "date-fns": "^2.8.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
