--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
